<resources>
    <string name="app_name">ProjetoCarona</string>
    <string name="title_activity_maps">Seu local de partida</string>
    <string name="title_activity_user_register">Cadastre-se</string>
    <string name="title_activity_rides_register">Cadastrar carona</string>
    <string name="button_text_find">Busca</string>
    <string name="edit_text_search">Pesquise</string>
    <string name="button_previous">Anterior</string>
    <string name="button_next">Continuar</string>
    <string name="button_save">Salvar</string>
    <string name="user_name">Nome</string>
    <string name="record">Prontuário</string>
    <string name="vacancy">Nº Vagas</string>
    <string name="password">Senha</string>
    <string name="password_confirm">Confirme a senha</string>
    <string name="phone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="address">Endereço</string>
    <string name="will_give_ride">Darei carona</string>
    <string name="back">Voltar</string>
    <string name="next">Continuar</string>
    <string name="quit">Sair</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="register">Cadastrar</string>
    <string name="enter">Entrar</string>


    <!-- Strings related warnings -->
    <string name="check_connection">Falha ao conectar. Verifique a conexão.</string>
    <string name="use_moodle_data">Utilize o prontuário e a senha do Moodle</string>
    <string name="invalid_record_password">Prontuário ou senha inválidos.</string>
    <string name="unavailable_server">Servidor indisponível.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login_default">Entrar</string>
    <string name="friday">S</string>
    <string name="thursday">Q</string>
    <string name="saturday">S</string>
    <string name="wednesday">Q</string>
    <string name="tuesday">T</string>
    <string name="monday">S</string>
    <string name="week_mon">mon</string>
    <string name="week_tue">tue</string>
    <string name="week_wed">wed</string>
    <string name="week_thu">thu</string>
    <string name="week_fri">fri</string>
    <string name="week_sat">sat</string>
    <string name="days">Dias</string>
    <string name="direction">Sentido</string>
    <string name="go_time">Hora de ida</string>
    <string name="back_time">Hora de volta</string>
    <string name="title_activity_register_routes">Cadastre a rota</string>
    <string name="time_mask">__:__</string>
    <string name="title_activity_time_picker_fragment">TimePickerFragment</string>
    <string name="select_route">Selecione a rota</string>
    <string name="go_vacancy">Nº vagas ida</string>
    <string name="back_vacancy">Nº vagas volta</string>
    <string name="edit_route">Editar rota</string>
    <string name="address_register">Cadastre seu endereço</string>
    <string name="plus">+</string>
    <string name="exclude">X</string>
    <string name="from">de</string>
    <string name="by">por</string>
    <string name="to">a</string>
    <string name="title_activity_lateral_menu">LateralMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="save_ride">Salvar carona</string>

    <string name="to_offer">oferecer</string>
    <string name="offer_ride">ofereceu uma carona</string>
    <string name="to_request">pedir</string>
    <string name="request_ride">pediu uma carona</string>
    <!-- Relativo a notificações de carona -->
    <string name="title_activity_ride_detail_maps">Map</string>
    <string name="confirm">Confirmar</string>
    <string name="reject">Recusar</string>
    <string name="maps_my_rides">Minhas Caronas</string>
    <string name="maps_all_rides">Todas</string>
    <string name="maps_waiting_confirm_ride">Aguardando confirmação de carona</string>
    <string name="maps_ask_ride">Pedir carona</string>
    <string name="maps_offer_ride">Oferecer carona</string>
    <string name="maps_see_profile">Ver perfil</string>
    <string name="pending_rides_to_me">caronas pendentes para mim</string>
    <string name="maps_cancel_ride">Carona ativa. Deseja cancelar a carona?</string>


</resources>
